@@ -1,0 +1,142 @@
+<VoiceMasks>
+	<Name>Default</Name>
+		<fSpecEnergyWeight>1.00</fSpecEnergyWeight>
+		<fPitchScale>0.18</fPitchScale>
+		<fWhisperValue>-1</fWhisperValue>
+		<fRoboticValue>-1</fRoboticValue>
+	<Name>Generic Sans</Name>
+		<fSpecEnergyWeight>0.70</fSpecEnergyWeight>
+		<fPitchScale>0.18</fPitchScale>
+		<fWhisperValue>-1</fWhisperValue>
+		<fRoboticValue>0.17</fRoboticValue>
+	<Name>Cartoon</Name>
+		<fSpecEnergyWeight>0.10</fSpecEnergyWeight>
+		<fPitchScale>-1</fPitchScale>
+		<fWhisperValue>-1</fWhisperValue>
+		<fRoboticValue>-1</fRoboticValue>
+	<Name>Sarcastic Boy</Name>
+		<fSpecEnergyWeight>0.03</fSpecEnergyWeight>
+		<fPitchScale>0.05</fPitchScale>
+		<fWhisperValue>1.00</fWhisperValue>
+		<fRoboticValue>0.00</fRoboticValue>
+	<Name>Male Chain Smoker</Name>
+		<fSpecEnergyWeight>0.03</fSpecEnergyWeight>
+		<fPitchScale>0.05</fPitchScale>
+		<fWhisperValue>-1</fWhisperValue>
+		<fRoboticValue>-1</fRoboticValue>
+	<Name>Male Clean Deep</Name>
+		<fSpecEnergyWeight>0.03</fSpecEnergyWeight>
+		<fPitchScale>0.47</fPitchScale>
+		<fWhisperValue>1.00</fWhisperValue>
+		<fRoboticValue>-1</fRoboticValue>
+	<Name>Male Hoarse</Name>
+		<fSpecEnergyWeight>0.05</fSpecEnergyWeight>
+		<fPitchScale>-1</fPitchScale>
+		<fWhisperValue>0.10</fWhisperValue>
+		<fRoboticValue>-1</fRoboticValue>
+	<Name>Male Clean Nasal</Name>
+		<fSpecEnergyWeight>0.17</fSpecEnergyWeight>
+		<fPitchScale>0.44</fPitchScale>
+		<fWhisperValue>1.00</fWhisperValue>
+		<fRoboticValue>-1</fRoboticValue>
+	<Name>Flutter</Name>
+		<fSpecEnergyWeight>0.03</fSpecEnergyWeight>
+		<fPitchScale>0.47</fPitchScale>
+		<fWhisperValue>-1</fWhisperValue>
+		<fRoboticValue>-1</fRoboticValue>
+	<Name>Child</Name>
+		<fSpecEnergyWeight>0.10</fSpecEnergyWeight>
+		<fPitchScale>0.70</fPitchScale>
+		<fWhisperValue>-1</fWhisperValue>
+		<fRoboticValue>-1</fRoboticValue>
+	<Name>Teenage Girl</Name>
+		<fSpecEnergyWeight>0.31</fSpecEnergyWeight>
+		<fPitchScale>0.65</fPitchScale>
+		<fWhisperValue>-1</fWhisperValue>
+		<fRoboticValue>-1</fRoboticValue>
+	<Name>Someone's Mom</Name>
+		<fSpecEnergyWeight>0.42</fSpecEnergyWeight>
+		<fPitchScale>0.37</fPitchScale>
+		<fWhisperValue>-1</fWhisperValue>
+		<fRoboticValue>-1</fRoboticValue>
+	<Name>Female Medium Hoarse</Name>
+		<fSpecEnergyWeight>0.42</fSpecEnergyWeight>
+		<fPitchScale>0.37</fPitchScale>
+		<fWhisperValue>0.32</fWhisperValue>
+		<fRoboticValue>-1</fRoboticValue>
+	<Name>Teenage Boy</Name>
+		<fSpecEnergyWeight>0.42</fSpecEnergyWeight>
+		<fPitchScale>0.19</fPitchScale>
+		<fWhisperValue>-1</fWhisperValue>
+		<fRoboticValue>-1</fRoboticValue>
+	<Name>Teenage Geek Boy</Name>
+		<fSpecEnergyWeight>0.39</fSpecEnergyWeight>
+		<fPitchScale>0.36</fPitchScale>
+		<fWhisperValue>1.00</fWhisperValue>
+		<fRoboticValue>-1</fRoboticValue>
+	<Name>Male Medium</Name>
+		<fSpecEnergyWeight>0.63</fSpecEnergyWeight>
+		<fPitchScale>0.22</fPitchScale>
+		<fWhisperValue>-1</fWhisperValue>
+		<fRoboticValue>-1</fRoboticValue>
+	<Name>Deep Clean</Name>
+		<fSpecEnergyWeight>1.00</fSpecEnergyWeight>
+		<fPitchScale>-1</fPitchScale>
+		<fWhisperValue>-1</fWhisperValue>
+		<fRoboticValue>-1</fRoboticValue>
+	<Name>Full Medium Deep</Name>
+		<fSpecEnergyWeight>0.52</fSpecEnergyWeight>
+		<fPitchScale>0.01</fPitchScale>
+		<fWhisperValue>-1</fWhisperValue>
+		<fRoboticValue>-1</fRoboticValue>
+	<Name>Full Deep Clean</Name>
+		<fSpecEnergyWeight>0.90</fSpecEnergyWeight>
+		<fPitchScale>0.05</fPitchScale>
+		<fWhisperValue>-1</fWhisperValue>
+		<fRoboticValue>-1</fRoboticValue>
+	<Name>Full Deep Clean II</Name>
+		<fSpecEnergyWeight>1.00</fSpecEnergyWeight>
+		<fPitchScale>0.00</fPitchScale>
+		<fWhisperValue>-1</fWhisperValue>
+		<fRoboticValue>-1</fRoboticValue>
+	<Name>Male Older</Name>
+		<fSpecEnergyWeight>0.83</fSpecEnergyWeight>
+		<fPitchScale>0.01</fPitchScale>
+		<fWhisperValue>-1</fWhisperValue>
+		<fRoboticValue>-1</fRoboticValue>
+	<Name>Robot Girl</Name>
+		<fSpecEnergyWeight>0.10</fSpecEnergyWeight>
+		<fPitchScale>0.70</fPitchScale>
+		<fWhisperValue>-1</fWhisperValue>
+		<fRoboticValue>0.41</fRoboticValue>
+	<Name>Robot Child</Name>
+		<fSpecEnergyWeight>0.01</fSpecEnergyWeight>
+		<fPitchScale>-1</fPitchScale>
+		<fWhisperValue>-1</fWhisperValue>
+		<fRoboticValue>0.87</fRoboticValue>
+	<Name>Robot Chic</Name>
+		<fSpecEnergyWeight>0.3</fSpecEnergyWeight>
+		<fPitchScale>-1</fPitchScale>
+		<fWhisperValue>-1</fWhisperValue>
+		<fRoboticValue>0.58</fRoboticValue>
+	<Name>Robot Male Medium</Name>
+		<fSpecEnergyWeight>0.5</fSpecEnergyWeight>
+		<fPitchScale>-1</fPitchScale>
+		<fWhisperValue>-1</fWhisperValue>
+		<fRoboticValue>0.05</fRoboticValue>
+	<Name>Robot Darth</Name>
+		<fSpecEnergyWeight>1.00</fSpecEnergyWeight>
+		<fPitchScale>-1</fPitchScale>
+		<fWhisperValue>-1</fWhisperValue>
+		<fRoboticValue>0.01</fRoboticValue>
+	<Name>Female Medium Sans</Name>
+		<fSpecEnergyWeight>0.39</fSpecEnergyWeight>
+		<fPitchScale>-1</fPitchScale>
+		<fWhisperValue>-1</fWhisperValue>
+		<fRoboticValue>0.44</fRoboticValue>
+	<Name>Male Older Sans </Name>
+		<fSpecEnergyWeight>0.82</fSpecEnergyWeight>
+		<fPitchScale>-1</fPitchScale>
+		<fWhisperValue>-1</fWhisperValue>
+		<fRoboticValue>0.01</fRoboticValue>
+</VoiceMasks>
